tests/functional/data/transpiler/common/errors/exclusive/applied_to_stmt.err
applied_to_stmt.cpp:4:9: error: 'exclusive' attribute only applies to type or variable declarations
    4 |         @exclusive for (int j = 0; j < 10; ++j) {
      |         ^
